ref: add ExceptionMessage for centralized exception message storage